--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="main">
+            <div class="container">
+                <div class="main__content">
+                    <h1 class="main__title">Площадка <br> для реализации <br> криптостикеров</h1>
+                    <div class="main__buttons">
+                        <div class="main__gradient">
+                            <button class="main__button-buy">Купить</button>
+                        </div>
+                        <button class="main__button-author">Стать автором</button>
+                    </div>
+                </div>
+            </div>
+            <div class="main__hero"></div>
+        </section>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
+        </script>
     <script src="./main.js"></script>
 </body>
 
