--- a/index.html
+++ b/index.html
@@ -61,6 +61,62 @@
             </div>
             <div class="main__hero"></div>
         </section>
+        <section class="auction">
+            <div class="container">
+                <div class="auction__content">
+                    <div class="auction__bar">
+                        <h2 class="auction__heading heading">Аукцион</h2>
+                        <div class="auction__live">
+                            <p class="auction__live-text"><img class="auction__live-dot" src="./images/live_dot.svg"
+                                    alt="">Live auction</p>
+                        </div>
+                    </div>
+                    <div class="auction__card">
+                        <img class="auction__card-img" src="./images/auction_sticker.png" alt="">
+                        <div class="auction__card-content">
+                            <div class="auction__user">
+                                <img class="auction__user-img" src="./images/auction_avatar.png" alt="">
+                                <p class="auction__user-name">Serge_VM222</p>
+                            </div>
+                            <p class="auction__card-title">Witcherrr_3 (xml_t5)</p>
+                            <div class="auction__price-time">
+                                <div class="auction__price">
+                                    <div class="auction__price-info">
+                                        <p class="auction__price-text">Ставка:</p>
+                                        <p class="auction__crypto">0.10 ETH</p>
+                                        <p class="auction__dollar">$351.24</p>
+                                    </div>
+                                </div>
+                                <div class="auction__time">
+                                    <div class="auction__time-info">
+                                        <p class="auction__time-text">Окончание через:</p>
+                                        <div class="auction__clock">
+                                            <div class="auction__time-type">
+                                                <p id="hours-1" class="auction__clock-num">01</p>
+                                                <p class="auction__clock-text">Час</p>
+                                            </div>
+                                            <div class="auction__time-type">
+                                                <p id="minutes-1" class="auction__clock-num">48</p>
+                                                <p class="auction__clock-text">Мин</p>
+                                            </div>
+                                            <div class="auction__time-type">
+                                                <p id="seconds-1" class="auction__clock-num">47</p>
+                                                <p class="auction__clock-text">Сек</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <img class="auction__clock-img" src="./images/alarm-clock.svg" alt="">
+                                </div>
+                            </div>
+                            <div class="auction__gradient">
+                                <button class="auction__button">Купить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
