--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="auction__gradient">
-                                <button class="auction__button">Купить</button>
+                                <button class="auction__button">Cделать ставку</button>
                             </div>
                         </div>
                     </div>
