--- a/index.html
+++ b/index.html
@@ -115,6 +115,193 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="other-auction">
+            <div class="container">
+                <div class="other-auction__content">
+                    <p class="other-auction__heading">Другие аукционы</p>
+                    <div id="othAucSlider" class="slider">
+                        <div id="othAucSlides" class="slider__slides">
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_alien.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_frank.png" alt="">
+                                            <p class="card__user-name">Frank.Nagval</p>
+                                        </div>
+                                        <p class="card__title">Alien (green) e_e</p>
+                                        <p class="card__price">0.02 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-2" class="card__time-text">03</p>
+                                            <p class="card__time-text">часа</p>
+                                            <p id="minutes-2" class="card__time-text">25</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-2" class="card__time-text">23</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_cobra.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_cph.png" alt="">
+                                            <p class="card__user-name">CPH_777</p>
+                                        </div>
+                                        <p class="card__title">CoBRRRa</p>
+                                        <p class="card__price">0.5 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-3" class="card__time-text">00</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-3" class="card__time-text">15</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-3" class="card__time-text">03</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_diamonds.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_supah.png" alt="">
+                                            <p class="card__user-name">sUpah_kiLLah</p>
+                                        </div>
+                                        <p class="card__title">Diamonds (4)</p>
+                                        <p class="card__price">0.008 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-4" class="card__time-text">23</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-4" class="card__time-text">05</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-4" class="card__time-text">08</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_holofobia.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_ttgs.png" alt="">
+                                            <p class="card__user-name">ttgs</p>
+                                        </div>
+                                        <p class="card__title">Holofobia-2</p>
+                                        <p class="card__price">1.0 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-5" class="card__time-text">01</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-5" class="card__time-text">15</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-5" class="card__time-text">55</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_baby_yoda.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_pepe.png" alt="">
+                                            <p class="card__user-name">Peppppe22</p>
+                                        </div>
+                                        <p class="card__title">Baby Yoda 1</p>
+                                        <p class="card__price">0.2 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-6" class="card__time-text">01</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-6" class="card__time-text">28</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-6" class="card__time-text">11</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_alien_vs_predator.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_1300.png" alt="">
+                                            <p class="card__user-name">1300e1440</p>
+                                        </div>
+                                        <p class="card__title">alien vs. predator (01)</p>
+                                        <p class="card__price">0.09 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-7" class="card__time-text">08</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-7" class="card__time-text">44</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-7" class="card__time-text">43</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_iamdecepticon.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_robert.png" alt="">
+                                            <p class="card__user-name">Robert_Wward</p>
+                                        </div>
+                                        <p class="card__title">IAMDECEPTICON</p>
+                                        <p class="card__price">0.1 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-8" class="card__time-text">00</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-8" class="card__time-text">55</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-8" class="card__time-text">18</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider__slide">
+                                <div class="card">
+                                    <img class="card__img" src="./images/other_auc_ghostbusters.png" alt="">
+                                    <div class="card__info">
+                                        <div class="card__user">
+                                            <img class="card__user-img" src="./images/other_auc_ttgs2.png" alt="">
+                                            <p class="card__user-name">ttgs</p>
+                                        </div>
+                                        <p class="card__title">Ghostbusterrrrrrrs</p>
+                                        <p class="card__price">0.09 ETH</p>
+                                        <div class="card__time">
+                                            <p id="hours-9" class="card__time-text">00</p>
+                                            <p class="card__time-text">час</p>
+                                            <p id="minutes-9" class="card__time-text">18</p>
+                                            <p class="card__time-text">мин</p>
+                                            <p id="seconds-9" class="card__time-text">12</p>
+                                            <p class="card__time-text">сек</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="othAucNav" class="slider__nav">
+                        <div class="slider__nav-item" data-index="0"></div>
+                        <div class="slider__nav-item" data-index="1"></div>
+                        <div class="slider__nav-item" data-index="2"></div>
+                        <div class="slider__nav-item" data-index="3"></div>
+                        <div class="slider__nav-item" data-index="4"></div>
+                        <div class="slider__nav-item" data-index="5"></div>
+                    </div>
+                    <button class="other-auction__button">Все аукционы</button>
+                </div>
             </div>
         </section>
     </main>
