--- a/index.html
+++ b/index.html
@@ -304,6 +304,52 @@
                 </div>
             </div>
         </section>
+        <section class="new-stickers">
+            <div class="container">
+                <div class="new-stickers__content">
+                    <h2 class="new-stickers__heading heading"><img class="new-stickers__fire" src="./images/fire.svg"
+                            alt="">Новые стикеры</h2>
+                    <div id="newStickersSlider" class="slider">
+                        <div id="newStickersSlides" class="slider__slides">
+                            <div class="slider__slide">
+                                <img class="new-stickers__img" src="./images/new_stickers_ghosts.png" alt="">
+                                <img class="new-stickers__img-tablet" src="./images/new_stickers_ghost_parental.png"
+                                    alt="">
+                            </div>
+                            <div class="slider__slide">
+                                <img class="new-stickers__img" src="./images/new_stickers_parental.png" alt="">
+                                <img class="new-stickers__img-tablet" src="./images/new_stickers_ohrome_infinity.png"
+                                    alt="">
+                            </div>
+                            <div class="slider__slide">
+                                <img class="new-stickers__img" src="./images/new_stickers_ohrome.png" alt="">
+                                <img class="new-stickers__img-tablet" src="./images/new_stickers_planet_cool.png"
+                                    alt="">
+                            </div>
+                            <div class="slider__slide">
+                                <img class="new-stickers__img" src="./images/new_stickers_infinity.png" alt="">
+                                <img class="new-stickers__img-tablet" src="./images/new_stickers_new_wave_big.png"
+                                    alt="">
+                            </div>
+                            <div class="slider__slide">
+                                <img class="new-stickers__img" src="./images/new_stickers_planet.png" alt="">
+                            </div>
+                            <div class="slider__slide">
+                                <img class="new-stickers__img" src="./images/new_stickers_new_wave.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div id="newStickersNav" class="slider__nav">
+                        <button class="slider__nav-button">1</button>
+                        <button class="slider__nav-button">2</button>
+                        <button class="slider__nav-button">3</button>
+                        <button class="slider__nav-button">4</button>
+                        <button class="slider__nav-button">5</button>
+                        <button class="slider__nav-button">6</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
