--- a/index.html
+++ b/index.html
@@ -351,6 +351,31 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <img class="footer__logo" src="./images/Logo.svg" alt="">
+                <nav class="navbar">
+                    <ul class="navbar__list">
+                        <li class="navbar__item">
+                            <a class="navbar__link" href="#">Соглашение</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a class="navbar__link" href="#">Лицензия</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a class="navbar__link" href="#">FAQ</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class="footer__black">
+            <div class="container">
+                <p class="footer__copyright">AURA® | 2024.</p>
+            </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous">
         </script>
