--- a/index.html
+++ b/index.html
@@ -350,6 +350,31 @@
                 </div>
             </div>
         </section>
+        <section class="condition">
+            <div class="container">
+                <div class="condition__content">
+                    <div class="condition__info">
+                        <p class="condition__heading">Для попадания в топ необходимо:</p>
+                        <p class="condition__text"><img class="condition__icon" src="./images/condition_img.svg"
+                                alt="">Минимум пять
+                            опубликованных работ</p>
+                        <p class="condition__text"><img class="condition__icon" src="./images/condition_smile.svg"
+                                alt="">Инвайт трём коллегам
+                            по цеху</p>
+                        <p class="condition__text"><img class="condition__icon" src="./images/condition_verified.svg"
+                                alt="">Верифицированный
+                            аккаунт</p>
+                    </div>
+                    <div class="condition__img-container">
+                        <img class="condition__img" src="./images/condition_smile.png" alt="">
+                        <img class="condition__img" src="./images/condition_smile.png" alt="">
+                        <img class="condition__img" src="./images/condition_smile.png" alt="">
+                        <img class="condition__img" src="./images/condition_smile.png" alt="">
+                        <img class="condition__img" src="./images/condition_smile.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
