--- a/index.html
+++ b/index.html
@@ -350,6 +350,82 @@
                 </div>
             </div>
         </section>
+        <section class="best-sellers">
+            <div class="container">
+                <div class="best-sellers__content">
+                    <h2 class="best-sellers__heading heading">Топ продаж</h2>
+                    <div class="best-sellers__cards">
+                        <div class="card">
+                            <img class="card__img" src="./images/best_sellers_holofobia.png" alt="">
+                            <div class="card__info">
+                                <div class="card__user">
+                                    <img class="card__user-img" src="./images/other_auc_ttgs.png" alt="">
+                                    <p class="card__user-name">ttgs</p>
+                                </div>
+                                <p class="card__title">Holofobia1</p>
+                                <p class="card__price">4.70 ETH<span class="card__dollar">($16,873.47)</span></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card__img" src="./images/best_sellers_ye.png" alt="">
+                            <div class="card__info">
+                                <div class="card__user">
+                                    <img class="card__user-img" src="./images/best_sellers_tat" alt="">
+                                    <p class="card__user-name">Tat_2</p>
+                                </div>
+                                <p class="card__title">Y.EEE</p>
+                                <p class="card__price">3.00 ETH<span class="card__dollar">($10,731.24)</span></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card__img" src="./images/best_sellers_baby_joda.png" alt="">
+                            <div class="card__info">
+                                <div class="card__user">
+                                    <img class="card__user-img" src="./images/best_sellers_chris.png" alt="">
+                                    <p class="card__user-name">Chris22</p>
+                                </div>
+                                <p class="card__title">Baby Joda</p>
+                                <p class="card__price">2.00 ETH<span class="card__dollar">($7,121.04)</span></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card__img" src="./images/best_sellers_infinity.png" alt="">
+                            <div class="card__info">
+                                <div class="card__user">
+                                    <img class="card__user-img" src="./images/best_sellers_oswald.png" alt="">
+                                    <p class="card__user-name">Oswaald</p>
+                                </div>
+                                <p class="card__title">Infinity_09</p>
+                                <p class="card__price">1.6109 ETH<span class="card__dollar">($5,762.32)</span></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card__img" src="./images/best_sellers_sad.png" alt="">
+                            <div class="card__info">
+                                <div class="card__user">
+                                    <img class="card__user-img" src="./images/best_sellers_paul.png" alt="">
+                                    <p class="card__user-name">Paul-22</p>
+                                </div>
+                                <p class="card__title">Sadsadsad</p>
+                                <p class="card__price">1.50 ETH<span class="card__dollar">($5,365.62)</span></p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img class="card__img" src="./images/best_sellers_atn.png" alt="">
+                            <div class="card__info">
+                                <div class="card__user">
+                                    <img class="card__user-img" src="./images/best_sellers_wardx.png" alt="">
+                                    <p class="card__user-name">wardxxx</p>
+                                </div>
+                                <p class="card__title">Attntn</p>
+                                <p class="card__price">1.0 ETH<span class="card__dollar">($3,577.08)</span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        </section>
         <section class="condition">
             <div class="container">
                 <div class="condition__content">
