--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <section class="other-auction">
             <div class="container">
                 <div class="other-auction__content">
-                    <p class="other-auction__heading">Другие аукционы</p>
+                    <h3 class="other-auction__heading second-heading">Другие аукционы</h3>
                     <div id="othAucSlider" class="slider">
                         <div id="othAucSlides" class="slider__slides">
                             <div class="slider__slide">
@@ -350,6 +350,35 @@
                 </div>
             </div>
         </section>
+        <section class="subscribe">
+            <div class="container">
+                <div class="subscribe__content">
+                    <div class="subscribe__info">
+                        <h3 class="subscribe__heading second-heading">Будь в курсе новинок! Подпишись на рассылку!</h3>
+                        <form class="form">
+                            <input class="form__input" type="text" placeholder="Имя">
+                            <input class="form__input" type="email" placeholder="E-mail">
+                            <div class="subscribe__gradient">
+                                <button class="subscribe__button" type="button">Подписаться</button>
+                            </div>
+                            <div class="form__checkbox-container">
+                                <button class="form__checkbox-button" type="button"><img class="form__checkbox-img"
+                                        src="./images/form_checkbox_ok.svg" alt=""></button>
+                                <p class="form__checkbox-text">Согласен на обработку персональных данных</p>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="subscribe__img-container">
+                        <img class="subscribe__img" src="./images/subscribe_okey_block.png" alt="">
+                        <img class="subscribe__img" src="./images/subscribe_okey.png" alt="">
+                        <img class="subscribe__img" src="./images/subscribe_okey.png" alt="">
+                        <img class="subscribe__img" src="./images/subscribe_okey.png" alt="">
+                        <img class="subscribe__img" src="./images/subscribe_okey.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        </section>
         <section class="best-sellers">
             <div class="container">
                 <div class="best-sellers__content">
@@ -370,7 +399,7 @@
                             <img class="card__img" src="./images/best_sellers_ye.png" alt="">
                             <div class="card__info">
                                 <div class="card__user">
-                                    <img class="card__user-img" src="./images/best_sellers_tat" alt="">
+                                    <img class="card__user-img" src="./images/best_sellers_tat.png" alt="">
                                     <p class="card__user-name">Tat_2</p>
                                 </div>
                                 <p class="card__title">Y.EEE</p>
