--- a/index.html
+++ b/index.html
@@ -378,6 +378,49 @@
                 </div>
             </div>
         </section>
+        <section class="author">
+            <div class="container">
+                <div class="author__content">
+                    <div class="author__info">
+                        <h2 class="author__heading heading">Стать автором</h2>
+                        <p class="author__subheading">Если ты художник или стремишься им стать — добро пожаловать к нам!
+                        </p>
+                        <p class="author__text">Отправь нам от трёх до пяти своих работ и напиши свой ник в телеграме.
+                            Если наши кураторы решат, что нам по пути, то мы обязательно свяжемся с тобой и обговорим
+                            условия сотрудничества! <span class="author__text-bold">Удачи!</span></p>
+                        <div class="author__img-container">
+                            <img class="author__img" src="./images/author_grey_hands.png" alt="">
+                            <img class="author__img" src="./images/author_green_hands.png" alt="">
+                            <img class="author__img" src="./images/author_red_hands.png" alt="">
+                        </div>
+                    </div>
+                    <div class="author__form">
+                        <div class="author__img-container">
+                            <img class="author__img" src="./images/author_grey_hands.png" alt="">
+                            <img class="author__img" src="./images/author_green_hands.png" alt="">
+                            <img class="author__img" src="./images/author_red_hands.png" alt="">
+                        </div>
+                        <form class="form">
+                            <div class="form__img-input-container">
+                                <div class="form__img-input-content">
+                                    <button class="form__img-input-button" type="button"><svg
+                                            class="form__img-input-icon" width="24" height="24" viewBox="0 0 24 24"
+                                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M14.0448 9.95516H24V14.0448H14.0448V24H9.95516V14.0448H0V9.95516H9.95516V0H14.0448V9.95516Z"
+                                                fill="currentColor" />
+                                        </svg></button>
+                                    <p class="form__img-input-text">Прикрепить работы (.jpeg / .png)</p>
+                                </div>
+                            </div>
+                            <input class="form__input" type="text" placeholder="@telegram_nickname">
+                            <div class="author__gradient">
+                                <button class="author__button" type="button">Отправить</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="best-sellers">
             <div class="container">
